--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -8,21 +8,25 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.coolweather.ChooseAreaActivity"
+            android:name="com.example.coolweather.app.activity.ChooseAreaActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.coolweather.app.activity.WeatherActivity"
+            android:label="@string/title_activity_weather" >
         </activity>
     </application>
 
